--- a/Angular_deploy_V1.0.yml
+++ b/Angular_deploy_V1.0.yml
@@ -64,6 +64,6 @@
     - name: Kill pm2 service
       command: pm2 kill
     - name: Start service
-      command: pm2 start ng e2e -- start ./src/index.html --name "{{DOCKER_TAG}}-Service"
+      command: pm2 start npm -- start ./src/index.html --name "{{DOCKER_TAG}}-Service"
       args:
         chdir: "{{ dest_path }}"
