--- a/Angular_deploy_V1.0.yml
+++ b/Angular_deploy_V1.0.yml
@@ -51,8 +51,8 @@
       command: sudo npm install -g @angular/cli
     - name: Install reqired packages
       command: cd "{{ dest_path }}"
-    # - name: npm install pm2@latest -g
-      #npm: name=pm2 global=yes state=present
+    - name: npm install pm2@latest -g
+     # npm: name=pm2 global=yes state=present
 	  - name: Install npm installation
       command: npm install
 	  - name: Install application/libraries
