--- a/Angular_deploy_V1.0.yml
+++ b/Angular_deploy_V1.0.yml
@@ -57,12 +57,12 @@
       command: npm install
 	  - name: Install application/libraries
       command: ng build
-    - name: Get Forever's list of running processes
-      command: pm2 status
-      register: pm2_status
+  # - name: Get Forever's list of running processes
+   #   command: pm2 status
+   #   register: pm2_status
       changed_when: false
-    - name: Kill pm2 service
-      command: pm2 kill
+  #  - name: Kill pm2 service
+  #    command: pm2 kill
     - name: Start service
       command: pm2 start npm -- start ./src/index.html --name "{{DOCKER_TAG}}-Service"
       args:
