--- a/Angular_deploy_V1.0.yml
+++ b/Angular_deploy_V1.0.yml
@@ -49,20 +49,20 @@
         state: present
     - name: Install reqired packages
       command: sudo npm install -g @angular/cli
-    - name: Install reqired packages
-      command: cd "{{ dest_path }}"
-    #- name: npm install pm2@latest -g
-     # npm: name=pm2 global=yes state=present
-	  - name: Install npm installation
+    - name: Install npm installation
       command: npm install
 	  - name: Install application/libraries
       command: ng build
-  # - name: Get Forever's list of running processes
-   #   command: pm2 status
-   #   register: pm2_status
+    - name: Install reqired packages
+      command: cd "{{ dest_path }}"
+    - name: Install PM2
+      npm: name=pm2 global=yes state=present
+	  - name: Get Forever's list of running processes
+      command: pm2 status
+      register: pm2_status
       changed_when: false
-  #  - name: Kill pm2 service
-  #    command: pm2 kill
+    - name: Kill pm2 service
+      command: pm2 kill
     - name: Start service
       command: pm2 start npm -- start ./src/index.html --name "{{DOCKER_TAG}}-Service"
       args:
