--- a/Angular_deploy_V1.0.yml
+++ b/Angular_deploy_V1.0.yml
@@ -51,6 +51,8 @@
       command: sudo npm install -g @angular/cli
     - name: Install npm installation
       command: npm install
+    - name: Build an application and serve it locally
+      command: ng serve
 	  - name: Install application/libraries
       command: ng build
     - name: Install reqired packages
