--- a/Angular_deploy_V1.0.yml
+++ b/Angular_deploy_V1.0.yml
@@ -63,8 +63,8 @@
       command: pm2 status
       register: pm2_status
       changed_when: false
-    - name: Kill pm2 service
-      command: pm2 kill
+    #- name: Kill pm2 service
+    #  command: pm2 kill
     - name: Start service
       command: pm2 start ng e2e -- start ./src/index.html --name "{{DOCKER_TAG}}-Service"
       args:
