--- a/Angular_deploy_V1.0.yml
+++ b/Angular_deploy_V1.0.yml
@@ -51,10 +51,10 @@
       command: sudo npm install -g @angular/cli
     - name: Install npm installation
       command: npm install
-    - name: Build an application and serve it locally
-      command: ng serve
-	  - name: Install application/libraries
-      command: ng build
+    #- name: Build an application and serve it locally
+     # command: ng serve
+	 # - name: Install application/libraries
+     # command: ng build
     - name: Install reqired packages
       command: cd "{{ dest_path }}"
     - name: Install PM2
@@ -66,6 +66,6 @@
     #- name: Kill pm2 service
     #  command: pm2 kill
     - name: Start service
-      command: pm2 start ng e2e -- start ./src/index.html --name "{{DOCKER_TAG}}-Service"
+      command: pm2 start -- start ./src/index.html --name "{{DOCKER_TAG}}-Service"
       args:
         chdir: "{{ dest_path }}"
