--- a/Angular_deploy_V1.0.yml
+++ b/Angular_deploy_V1.0.yml
@@ -43,23 +43,21 @@
       shell: 'curl --silent --location https://rpm.nodesource.com/setup_16.x | bash -'
     # If other package are required mention the package name in "name"
     # eg: ngix, curl, wget, apache2, nodejs
-    - name: Install reqired packages
+    - name: Install required packages
       yum:
         name: nodejs
         state: present
-    - name: Install reqired packages
+    - name: Install required packages
       command: sudo npm install -g @angular/cli
     - name: Install npm installation
       command: npm install
     - name: Build an application and serve it locally
       command: ng serve
-	  - name: Install application/libraries
-      command: ng build
-    - name: Install reqired packages
+    - name: Install required packages
       command: cd "{{ dest_path }}"
     - name: Install PM2
       npm: name=pm2 global=yes state=present
-	  - name: Get Forever's list of running processes
+    - name: Get Forever's list of running processes
       command: pm2 status
       register: pm2_status
       changed_when: false
