--- a/Angular_deploy_V1.0.yml
+++ b/Angular_deploy_V1.0.yml
@@ -43,27 +43,17 @@
       shell: 'curl --silent --location https://rpm.nodesource.com/setup_16.x | bash -'
     # If other package are required mention the package name in "name"
     # eg: ngix, curl, wget, apache2, nodejs
-    - name: Install required packages
+    - name: Install reqired packages
       yum:
         name: nodejs
         state: present
-    - name: Install required packages
+    - name: Install reqired packages
       command: sudo npm install -g @angular/cli
     - name: Install npm installation
       command: npm install
-    - name: Build an application and serve it locally
-      command: ng serve
-    - name: Install required packages
-      command: cd "{{ dest_path }}"
-    - name: Install PM2
-      npm: name=pm2 global=yes state=present
-    - name: Get Forever's list of running processes
-      command: pm2 status
-      register: pm2_status
-      changed_when: false
-    - name: Kill pm2 service
-      command: pm2 kill
+    - name: Install application/libraries
+      command: ng build
     - name: Start service
-      command: pm2 start -- start ./src/index.html --name "{{DOCKER_TAG}}-Service"
+      command: ng serve --host 0.0.0.0 --port 4200
       args:
         chdir: "{{ dest_path }}"
