--- a/Angular_deploy_V1.0.yml
+++ b/Angular_deploy_V1.0.yml
@@ -47,23 +47,21 @@
       yum:
         name: nodejs
         state: present
-    - name: Install @angular/cli
+    - name: Install Angular CLI
       command: sudo npm install -g @angular/cli
-    - name: Install npm packages
-      command: npm install
-    - name: Change directory to Angular workspace
-      command: cd "{{dest_path}}"
     - name: Build the application
       command: ng build
+      args:
+        chdir: "{{ dest_path }}"
     - name: Install PM2
       npm: name=pm2 global=yes state=present
-    - name: Get Forever's list of running processes
+    - name: Get PM2's list of running processes
       command: pm2 status
       register: pm2_status
       changed_when: false
-    - name: Kill pm2 service
+    - name: Kill PM2 service
       command: pm2 kill
     - name: Start service
       command: pm2 start -- start ./src/index.html --name "{{DOCKER_TAG}}-Service"
       args:
-        chdir: "{{dest_path}}"
+        chdir: "{{ dest_path }}"
