--- a/Angular_deploy_V1.0.yml
+++ b/Angular_deploy_V1.0.yml
@@ -26,50 +26,49 @@
         state: present
     - name: Pull docker image
       docker_image:
-        name: "{{ repo_path }}"
-        tag: "{{ DOCKER_TAG }}"
+        name: nrbaskar/angularcourse
+        tag: "{{DOCKER_TAG}}"
         source: pull
     - name: create directory
       file:
-        path: "{{ dest_path }}"
         state: directory
+        dest: "{{dest_path}}"
     - name: copy website to the host
       copy:
         src: ./
-        dest: "{{ dest_path }}"
+        dest: "{{dest_path}}"
     # Install NodeJS library
     # using multiple shell commands
     - name: Install Node.js 16.x repository
-      command: curl -fsSL https://rpm.nodesource.com/setup_16.x | sudo bash -
-    # Install required packages
+      get_url:
+        url: https://rpm.nodesource.com/setup_16.x
+        dest: /tmp/setup_16.x.sh
+        mode: 'u+x'
+    - name: Run Node.js 16.x setup script
+      shell: /tmp/setup_16.x.sh
     - name: Install required packages
       yum:
         name: nodejs
         state: present
-    # Install Angular CLI
     - name: Install Angular CLI
-      command: sudo npm install -g @angular/cli
-    # Install project dependencies
-    - name: Install project dependencies
-      command: npm install
+      npm:
+        name: '@angular/cli'
+        global: yes
+        state: present
+    - name: Install npm packages
+      npm:
+        path: "{{ dest_path }}"
+        state: present
+    - name: Build and serve the Angular application
+      shell: ng serve --host 0.0.0.0
       args:
         chdir: "{{ dest_path }}"
-    # Build the application
-    - name: Build the application
-      command: ng build --prod
-      args:
-        chdir: "{{ dest_path }}"
-    # Install PM2
     - name: Install PM2
       npm:
         name: pm2
         global: yes
-    # Stop running processes
-    - name: Stop running processes
-      command: pm2 kill
-      ignore_errors: yes
-    # Start the application
-    - name: Start the application
-      command: pm2 start ./src/index.html --name "{{ DOCKER_TAG }}-Service"
+        state: present
+    - name: Start PM2 service
+      shell: pm2 start ./src/index.html --name "{{DOCKER_TAG}}-Service"
       args:
         chdir: "{{ dest_path }}"
