--- a/Angular_deploy_V1.0.yml
+++ b/Angular_deploy_V1.0.yml
@@ -60,7 +60,7 @@
         path: "{{ dest_path }}"
         state: present
     - name: Build and serve the Angular application
-      shell: ng serve --host 0.0.0.0
+      shell: ng serve
       args:
         chdir: "{{ dest_path }}"
     - name: Install PM2
