--- a/Angular_deploy_V1.0.yml
+++ b/Angular_deploy_V1.0.yml
@@ -1,5 +1,5 @@
 ---
-- name: Staging server deployment
+- name: Staging server Deployment
   hosts: stageserver
   become_user: root
   become: true
@@ -7,13 +7,15 @@
     repo_path: nrbaskar/angularcourse:{{DOCKER_TAG}}
     dest_path: /home/ec2-user/{{DOCKER_TAG}}
   tasks:
-    - name: Install dependencies
+    - name: Install python pip
       yum:
-        name:
-          - python-pip
-          - docker
+        name: python-pip
         state: present
-    - name: Start Docker service
+    - name: Install docker
+      yum:
+        name: docker
+        state: present
+    - name: start docker
       service:
         name: docker
         state: started
@@ -22,38 +24,46 @@
       pip:
         name: docker-py
         state: present
-    - name: Pull Docker image
+    - name: Pull docker image
       docker_image:
         name: nrbaskar/angularcourse
         tag: "{{DOCKER_TAG}}"
         source: pull
-    - name: Build Angular project
-      shell: ng build --prod --output-path="{{dest_path}}/dist"
-      args:
-        chdir: "{{ playbook_dir }}/path/to/angular/project"
-    - name: Copy necessary files to destination path
+    - name: create directory
+      file:
+        state: directory
+        dest: "{{dest_path}}"
+    - name: copy website to the host
       copy:
-        src: "{{ playbook_dir }}/path/to/angular/project/dist"
-        dest: "{{ dest_path }}"
-        remote_src: yes
-    - name: Install and configure web server
+        src: ./
+        dest: "{{dest_path}}"
+    # Install NodeJS library
+    # using multiple shell commands
+    - name: Install Nodejs & AngularJS
+      shell: 'curl --silent --location https://rpm.nodesource.com/setup_16.x | bash -'
+    # If other package are required mention the package name in "name"
+    # eg: ngix, curl, wget, apache2, nodejs
+    - name: Install required packages
       yum:
-        name: httpd
+        name: nodejs
         state: present
-      notify:
-        - start web server
-    - name: Configure web server
-      template:
-        src: "{{ playbook_dir }}/path/to/httpd.conf.template"
-        dest: /etc/httpd/conf/httpd.conf
-      notify:
-        - restart web server
-    - name: Start web server
-      service:
-        name: httpd
-        state: started
-        enabled: yes
-    - name: Restart web server
-      service:
-        name: httpd
-        state: restarted
+    - name: Install required packages
+      command: sudo npm install -g @angular/cli
+    - name: Install npm installation
+      command: npm install
+    - name: Build an application and serve it locally
+      command: ng serve
+    - name: Install required packages
+      command: cd "{{ dest_path }}"
+    - name: Install PM2
+      npm: name=pm2 global=yes state=present
+    - name: Get Forever's list of running processes
+      command: pm2 status
+      register: pm2_status
+      changed_when: false
+    - name: Kill pm2 service
+      command: pm2 kill
+    - name: Start service
+      command: pm2 start -- start ./src/index.html --name "{{DOCKER_TAG}}-Service"
+      args:
+        chdir: "{{ dest_path }}"
