--- a/Angular_deploy_V1.0.yml
+++ b/Angular_deploy_V1.0.yml
@@ -6,6 +6,7 @@
   vars:
     repo_path: nrbaskar/angularcourse:{{DOCKER_TAG}}
     dest_path: /home/ec2-user/{{DOCKER_TAG}}
+	dest_path_1: /angular_project
   tasks:
     - name: Install python pip
       yum:
@@ -52,6 +53,7 @@
     - name: Install npm installation
       command: npm install
     - name: Build an application and serve it locally
+	  command: cd "{{ dest_path_1 }}"
       command: ng serve
     - name: Install required packages
       command: cd "{{ dest_path }}"
